Bug 165712 - FILEOPEN PPTX: Font size too big in textbox (with shrink text on overflow)
Summary: FILEOPEN PPTX: Font size too big in textbox (with shrink text on overflow)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.5.2 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-03-12 23:38 UTC by Gerald Pfeifer
Modified: 2026-02-05 12:45 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (Note to self: original is "*or Proprietary*") (141.47 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-03-12 23:38 UTC, Gerald Pfeifer
Details
Visual comparison PowerPoint/LibreOffice 24.2 (left) versus LibreOffice 24.8 (right) (1.17 MB, image/png)
2025-03-12 23:40 UTC, Gerald Pfeifer
Details
TextBox compare docs (837.01 KB, application/zip)
2025-06-04 15:05 UTC, Tomaz Vajngerl
Details
Updated screenshot: PowerPoint (left) versus Impress as of 2025-06-08 (right) (1.56 MB, image/png)
2025-06-08 08:54 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2025-03-12 23:38:59 UTC
Created attachment 199778 [details]
Sample slide (PPTX)

(Note to self: original is "*or Proprietary*")

Opening this attached PPTX file the font in the textbox is rendered
too big (and the line spacing is too small for the fontsize, so text 
lines run into each other vertically).

This may be an issue with shrink text on overflow.

This is a regression between 24.2

   Version: 24.2.8.0.0+ (X86_64) / LibreOffice Community
   Build ID: 0e74b05b607d931d63762b7d8f69f59b457c1e17
   CPU threads: 12; OS: Linux 6.13; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US

and 24.8

   Version: 24.8.7.0.0+ (X86_64) / LibreOffice Community
   Build ID: 514200a3316f1542a8142b72e3fda80de6bef149
   CPU threads: 12; OS: Linux 6.13; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US
Comment 1 Gerald Pfeifer 2025-03-12 23:40:13 UTC
Created attachment 199779 [details]
Visual comparison PowerPoint/LibreOffice 24.2 (left) versus LibreOffice 24.8 (right)
Comment 2 m_a_riosv 2025-03-13 00:45:29 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bff3d755c8c11721054f4ff40a3d5f723b0c6b96
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-GB
Calc: CL threaded
Comment 3 raal 2025-03-13 17:04:57 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 52abeff6d5836b29dbefe69f284bbd89f6672ae2 is the first bad commit
commit 52abeff6d5836b29dbefe69f284bbd89f6672ae2
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Wed Apr 3 04:32:44 2024 +0200

    source f61ea135430d7b4a1fac7de1e57a1314fbb1b49e


165441: editeng: use text scaling that better mimics MSO text scaling | https://gerrit.libreoffice.org/c/core/+/165441
Comment 4 Commit Notification 2025-06-04 15:03:19 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0aa479cf55b290283a1399cb71dfcdfb866d7052

tdf#165712 - sd: fix too small line spacing between text lines

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Tomaz Vajngerl 2025-06-04 15:05:25 UTC
Created attachment 201097 [details]
TextBox compare docs
Comment 6 Tomaz Vajngerl 2025-06-04 15:08:41 UTC
(In reply to Tomaz Vajngerl from comment #5)
> Created attachment 201097 [details]
> TextBox compare docs

For completeness I created this docs to compare with the text box fitting algorithm compared with MSO, which I also checked with Balazs's  patch applied to see if there is a bigger regression.
Comment 7 Gerald Pfeifer 2025-06-08 08:54:34 UTC
Created attachment 201135 [details]
Updated screenshot: PowerPoint (left) versus Impress as of 2025-06-08 (right)

This is definitely much nicer with

   Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
   Build ID: e24aa1d0f692cb6d64c00353356b0731e9afbadc
   CPU threads: 12; OS: Linux 6.14; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US

I was going to close as VERIFIED, something still bother me visually, and
digging in a bit deeper I noticed that while it definitely approximates
PowerPoint better now, in our example:

 · Font size still appears larger (leading to two items in bulleted lists
   rendering with one line more, marked up as yellow in the screenshot).

 · Line spacing appears smaller (one instance marked up as green).

Is there a bit more we can do?